# roxybrowser-manager

./: package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  profile.rs  settings.rs  sync.rs
src/components/: Dashboard.tsx  SettingsModal.tsx  SyncHistoryModal.tsx  Toast.tsx  UserCard.tsx  WebDavModal.tsx
src/stores/: useStore.ts
src/types/: settings.ts
